Fix typos, remove h5py fix

--- a/wide-deep.ipynb
+++ b/wide-deep.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "![wine-price](images/wineprice.png)\n",
     "\n",
-    "In this notebook we will build a classifier to correctly predict the price of a wine from its description. More in detail, we will combine the strengh of ML and DL learning using a Wide & Deep Model, which provides really good performance for Regression and Reccomendation tasks.\n",
+    "In this notebook, we will build a classifier to correctly predict the price of a wine from its description. More in detail, we will combine the strength of ML and DL learning using a Wide & Deep Model, which provides really good performance for Regression and Recommendation tasks.\n",
     "\n",
     "## Resource\n",
     "\n",
@@ -30,16 +30,7 @@
    "metadata": {},
    "source": [
     "## Initial Setup\n",
-    "Let's start by importing the packages, Setting the training variables and loading the csv file from which get all the data we need."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "! pip -q install h5py==2.8.0rc1"
+    "Let's start by importing the packages, setting the training variables and loading the csv file from which get all the data we need."
    ]
   },
   {
@@ -286,7 +277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this step we will perform data cleaning and splitting, useful for the next steps."
+    "In this step, we will perform data cleaning and splitting, useful for the next steps."
    ]
   },
   {
@@ -326,7 +317,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's take a look at data. The plot 'Tokens per sentence' is useful for setting the MAX_LEN variable, since we are building a static computational graph, we need to know the max lenght before starting the computation. This information is really helpful for building the deep model."
+    "Let's take a look at data. The plot *'Tokens per sentence'* is useful for setting the `MAX_LEN` variable, since we are building a static computational graph, we need to know the max length before starting the computation. This information is really helpful for building the deep model."
    ]
   },
   {
@@ -385,9 +376,9 @@
    "source": [
     "## Wide Representation: BoW\n",
     "\n",
-    "The Code below will encode the description of each sentence using the [BoW model](https://en.wikipedia.org/wiki/Bag-of-words_model). This representation will encode each sentence to a vector that keep track of the entries in the vocabulary which are used in the current sentences. This step will build a sparse vector(a vector with mostly zero values) for each description. The Code provides an example to help you get the intuition behind it.\n",
+    "The Code below will encode the description of each sentence using the  [BoW model](https://en.wikipedia.org/wiki/Bag-of-words_model). This representation will encode each sentence to a vector that keeps track of the entries in the vocabulary which are used in the current sentences. This step will build a sparse vector(a vector with mostly zero values) for each description. The Code provides an example to help you get the intuition behind it.\n",
     "\n",
-    "The **wide** term used for defining this model, is due to the sparse representation that this type of encoding carried out."
+    "The **wide**  term used for defining this model is due to the sparse representation that this type of encoding carried out."
    ]
   },
   {
@@ -448,7 +439,7 @@
    "source": [
     "## Wide Model\n",
     "\n",
-    "The model will use the BoW representation for the *winde description* and One-Hot encoding representation for the *wine variety* as Features for the Wide Model (a 2 layers NN).\n",
+    "The model will use the BoW representation for the *wine description* and One-Hot encoding representation for the *wine variety* as Features for the Wide Model (a 2 layers NN).\n",
     "\n",
     "![wide](images/wide.png)\n",
     "\n",
@@ -505,7 +496,7 @@
    "source": [
     "## Deep Representation: Embedding\n",
     "\n",
-    "The Code below will encode the description of each sentence using [Word Embedding](https://en.wikipedia.org/wiki/Word_embedding). This representation will encode each word of the sentence into a vector. Before applying this encoding we need to preprocess the wine description by converting each token to an index and pad the sentence to the same lenght."
+    "The Code below will encode the description of each sentence using [Word Embedding](https://en.wikipedia.org/wiki/Word_embedding). This representation will encode each word of the sentence into a vector. Before applying this encoding we need to preprocess the wine description by converting each token to an index and pad the sentence to the same length."
    ]
   },
   {
