--- a/wide-deep.ipynb
+++ b/wide-deep.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "autoexec": {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -181,117 +181,110 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>116051</th>\n",
-       "      <td>116051</td>\n",
-       "      <td>Argentina</td>\n",
-       "      <td>Starts out with nice aromas of ripe black frui...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>84</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>Mendoza Province</td>\n",
-       "      <td>Mendoza</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Malbec</td>\n",
-       "      <td>Acordeón</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36967</th>\n",
-       "      <td>36967</td>\n",
+       "      <th>76033</th>\n",
+       "      <td>76033</td>\n",
        "      <td>Italy</td>\n",
-       "      <td>Recioto is a dark red dessert wine that pairs ...</td>\n",
-       "      <td>500ml</td>\n",
-       "      <td>88</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Veneto</td>\n",
-       "      <td>Recioto della Valpolicella Classico</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Corvina, Rondinella, Molinara</td>\n",
-       "      <td>Antolini</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>78989</th>\n",
-       "      <td>78989</td>\n",
-       "      <td>Chile</td>\n",
-       "      <td>Mildly tropical on the nose and pleasant overa...</td>\n",
-       "      <td>Sepia Reserva</td>\n",
+       "      <td>As its name suggests, Quater is a blend of fou...</td>\n",
+       "      <td>Quater</td>\n",
        "      <td>86</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>Casablanca Valley</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>Sicily &amp; Sardinia</td>\n",
+       "      <td>Sicilia</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Sauvignon Blanc</td>\n",
-       "      <td>Vistamar</td>\n",
+       "      <td>White Blend</td>\n",
+       "      <td>Firriato</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>101953</th>\n",
-       "      <td>101953</td>\n",
+       "      <th>66490</th>\n",
+       "      <td>66490</td>\n",
+       "      <td>New Zealand</td>\n",
+       "      <td>Remarkably consistent in quality year after ye...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>90</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>Waipara Valley</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Chardonnay</td>\n",
+       "      <td>Pegasus Bay</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87654</th>\n",
+       "      <td>87654</td>\n",
        "      <td>US</td>\n",
-       "      <td>Sugary and simple, with sweet cola, licorice, ...</td>\n",
-       "      <td>Rolling Hills Estate Vineyard</td>\n",
-       "      <td>83</td>\n",
-       "      <td>24.0</td>\n",
+       "      <td>Intricate flavors of blackberries, cherries, r...</td>\n",
+       "      <td>Gary's Improv</td>\n",
+       "      <td>89</td>\n",
+       "      <td>35.0</td>\n",
        "      <td>California</td>\n",
-       "      <td>Temecula</td>\n",
-       "      <td>South Coast</td>\n",
-       "      <td>Syrah</td>\n",
-       "      <td>South Coast</td>\n",
+       "      <td>Napa Valley</td>\n",
+       "      <td>Napa</td>\n",
+       "      <td>Zinfandel</td>\n",
+       "      <td>Clif Family</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37988</th>\n",
-       "      <td>37988</td>\n",
-       "      <td>US</td>\n",
-       "      <td>A spray of lime pith mingles with white floral...</td>\n",
-       "      <td>Dry</td>\n",
-       "      <td>87</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>Finger Lakes</td>\n",
-       "      <td>Finger Lakes</td>\n",
-       "      <td>Riesling</td>\n",
-       "      <td>Prejean</td>\n",
+       "      <th>111941</th>\n",
+       "      <td>111941</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>Year after year, this is one of our favorite C...</td>\n",
+       "      <td>Grafin de la Tour</td>\n",
+       "      <td>88</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>Northeastern Italy</td>\n",
+       "      <td>Collio</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Chardonnay</td>\n",
+       "      <td>Villa Russiz</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5189</th>\n",
+       "      <td>5189</td>\n",
+       "      <td>France</td>\n",
+       "      <td>This is a well made, fruit and tannin wine. Wi...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>88</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>Bordeaux</td>\n",
+       "      <td>Graves</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Bordeaux-style Red Blend</td>\n",
+       "      <td>Château le Bonnat</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Unnamed: 0    country  \\\n",
-       "116051      116051  Argentina   \n",
-       "36967        36967      Italy   \n",
-       "78989        78989      Chile   \n",
-       "101953      101953         US   \n",
-       "37988        37988         US   \n",
+       "        Unnamed: 0      country  \\\n",
+       "76033        76033        Italy   \n",
+       "66490        66490  New Zealand   \n",
+       "87654        87654           US   \n",
+       "111941      111941        Italy   \n",
+       "5189          5189       France   \n",
        "\n",
-       "                                              description  \\\n",
-       "116051  Starts out with nice aromas of ripe black frui...   \n",
-       "36967   Recioto is a dark red dessert wine that pairs ...   \n",
-       "78989   Mildly tropical on the nose and pleasant overa...   \n",
-       "101953  Sugary and simple, with sweet cola, licorice, ...   \n",
-       "37988   A spray of lime pith mingles with white floral...   \n",
+       "                                              description        designation  \\\n",
+       "76033   As its name suggests, Quater is a blend of fou...             Quater   \n",
+       "66490   Remarkably consistent in quality year after ye...                NaN   \n",
+       "87654   Intricate flavors of blackberries, cherries, r...      Gary's Improv   \n",
+       "111941  Year after year, this is one of our favorite C...  Grafin de la Tour   \n",
+       "5189    This is a well made, fruit and tannin wine. Wi...                NaN   \n",
        "\n",
-       "                          designation  points  price           province  \\\n",
-       "116051                            NaN      84    9.0   Mendoza Province   \n",
-       "36967                           500ml      88    NaN             Veneto   \n",
-       "78989                   Sepia Reserva      86   10.0  Casablanca Valley   \n",
-       "101953  Rolling Hills Estate Vineyard      83   24.0         California   \n",
-       "37988                             Dry      87   12.0           New York   \n",
+       "        points  price            province     region_1 region_2  \\\n",
+       "76033       86   32.0   Sicily & Sardinia      Sicilia      NaN   \n",
+       "66490       90   39.0      Waipara Valley          NaN      NaN   \n",
+       "87654       89   35.0          California  Napa Valley     Napa   \n",
+       "111941      88   60.0  Northeastern Italy       Collio      NaN   \n",
+       "5189        88   20.0            Bordeaux       Graves      NaN   \n",
        "\n",
-       "                                   region_1      region_2  \\\n",
-       "116051                              Mendoza           NaN   \n",
-       "36967   Recioto della Valpolicella Classico           NaN   \n",
-       "78989                                   NaN           NaN   \n",
-       "101953                             Temecula   South Coast   \n",
-       "37988                          Finger Lakes  Finger Lakes   \n",
-       "\n",
-       "                              variety       winery  \n",
-       "116051                         Malbec     Acordeón  \n",
-       "36967   Corvina, Rondinella, Molinara     Antolini  \n",
-       "78989                 Sauvignon Blanc     Vistamar  \n",
-       "101953                          Syrah  South Coast  \n",
-       "37988                        Riesling      Prejean  "
+       "                         variety             winery  \n",
+       "76033                White Blend           Firriato  \n",
+       "66490                 Chardonnay        Pegasus Bay  \n",
+       "87654                  Zinfandel        Clif Family  \n",
+       "111941                Chardonnay       Villa Russiz  \n",
+       "5189    Bordeaux-style Red Blend  Château le Bonnat  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "autoexec": {
@@ -447,13 +440,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First Original Sample: Starts out with nice aromas of ripe black fruits and toasty oak, however it drops down in class in the mouth, where pointed, jabby acidity causes tang and sourness. There are good berry and plum flavors to offset the tartness, but it finishes narrow and snappy. Pretty good but needs better balance and structure.\n",
+      "First Original Sample: As its name suggests, Quater is a blend of four Sicilian grape varieties (Grillo, Catarratto, Carricante and Zibibbo). It opens with thick aromas of pineapple, crushed clove, caramel and candied fruit. The creamy mouthfeel is capped by a touch of zesty spice.\n",
       "\n",
-      "First Sample after BoW (sparse representation truncated at the first 100 vocabulary terms): [0. 1. 1. 0. 1. 1. 0. 0. 1. 0. 1. 1. 1. 0. 1. 0. 0. 0. 0. 0. 1. 0. 0. 1.\n",
-      " 0. 0. 1. 1. 0. 0. 1. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 1. 0. 0. 0.\n",
-      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0.\n",
-      " 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      " 0. 0. 0. 0.]\n"
+      "First Sample after BoW (sparse representation truncated at the first 100 vocabulary terms): [0. 1. 1. 1. 1. 1. 0. 1. 0. 0. 0. 0. 1. 1. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 1. 0. 0. 1. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 1.]\n"
      ]
     }
    ],
@@ -497,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -550,18 +543,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First Original Sample: Starts out with nice aromas of ripe black fruits and toasty oak, however it drops down in class in the mouth, where pointed, jabby acidity causes tang and sourness. There are good berry and plum flavors to offset the tartness, but it finishes narrow and snappy. Pretty good but needs better balance and structure.\n",
+      "First Original Sample: As its name suggests, Quater is a blend of four Sicilian grape varieties (Grillo, Catarratto, Carricante and Zibibbo). It opens with thick aromas of pineapple, crushed clove, caramel and candied fruit. The creamy mouthfeel is capped by a touch of zesty spice.\n",
       "\n",
-      "First Sample after Preprocessing for Embedding: [438 116   5 140  20   4  30  27  72   1 226  33 893  12 385  10  10   2\n",
-      "  70 583  23 960   1 119  26  44  43   1  58   8  11   2  14  12 157   1\n",
-      " 708 162  44  14 270 338 133   1 103   0   0   0   0   0   0   0   0   0\n",
+      "First Sample after Preprocessing for Embedding: [ 40  38 833 626   7   3  57   4 662 453 803   1  12 224   5 272  20   4\n",
+      " 150 420 371 284   1 300  13   2 140 124   7  31   3  99   4 352  35   0\n",
+      "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
       "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
       "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
       "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
@@ -602,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -721,13 +714,13 @@
     "\n",
     "If you left the default hyperpameters in the Notebook untouched, your training should take approximately:\n",
     "\n",
-    "On CPU machine: 1 minutes for 10 epochs.\n",
-    "On GPU machine: 30 seconds for 10 epochs."
+    "- On CPU machine: 1 minutes for 10 epochs.\n",
+    "- On GPU machine: 30 seconds for 10 epochs."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "autoexec": {
@@ -744,36 +737,22 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "95646/95646 [==============================] - 7s 68us/step - loss: 1185.0450 - acc: 0.0265\n",
+      "95646/95646 [==============================] - 9s 94us/step - loss: 1218.7875 - acc: 0.0281\n",
       "Epoch 2/10\n",
-      "95646/95646 [==============================] - 6s 62us/step - loss: 1016.1600 - acc: 0.0342\n",
+      "95646/95646 [==============================] - 6s 62us/step - loss: 1057.5545 - acc: 0.0327\n",
       "Epoch 3/10\n",
-      "95646/95646 [==============================] - 6s 61us/step - loss: 948.1913 - acc: 0.0350\n",
+      "95646/95646 [==============================] - 6s 58us/step - loss: 978.7590 - acc: 0.0345\n",
       "Epoch 4/10\n",
-      "95646/95646 [==============================] - 6s 60us/step - loss: 868.9016 - acc: 0.0358\n",
+      "95646/95646 [==============================] - 6s 58us/step - loss: 891.9354 - acc: 0.0355\n",
       "Epoch 5/10\n",
-      "95646/95646 [==============================] - 6s 59us/step - loss: 779.8685 - acc: 0.0368\n",
+      "95646/95646 [==============================] - 6s 58us/step - loss: 795.0603 - acc: 0.0366\n",
       "Epoch 6/10\n",
-      "95646/95646 [==============================] - 6s 60us/step - loss: 682.7870 - acc: 0.0380\n",
+      "95646/95646 [==============================] - 6s 60us/step - loss: 689.4046 - acc: 0.0383\n",
       "Epoch 7/10\n",
-      "95646/95646 [==============================] - 6s 59us/step - loss: 592.1035 - acc: 0.0384\n",
+      "95646/95646 [==============================] - 6s 59us/step - loss: 591.4843 - acc: 0.0389\n",
       "Epoch 8/10\n",
-      "95646/95646 [==============================] - 6s 59us/step - loss: 508.0052 - acc: 0.0408\n",
-      "Epoch 9/10\n",
-      "95646/95646 [==============================] - 5s 57us/step - loss: 432.3457 - acc: 0.0414\n",
-      "Epoch 10/10\n",
-      "95646/95646 [==============================] - 6s 58us/step - loss: 371.0544 - acc: 0.0442\n"
+      "66176/95646 [===================>..........] - ETA: 1s - loss: 495.3357 - acc: 0.0392"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tensorflow.python.keras._impl.keras.callbacks.History at 0x7fc765f383c8>"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -783,51 +762,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23912/23912 [==============================] - 1s 23us/step\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[660.6534052440736, 0.032954165273912775]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "combined_model.evaluate([description_bow_test, variety_test] + [test_embed], labels_test, batch_size=BATCH_SIZE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7aea67dbeac4895a8080bdf585f8605",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=1, description='# of test to evaluate/show', max=20, min=1), Output()), …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ipywidgets import interact\n",
     "from ipywidgets import widgets\n",
@@ -876,24 +822,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "223a86439d234c01b61caf8ff7e80b80",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Textarea(value='', description='test_description', placeholder='Type a wine Description …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ipywidgets import interact_manual\n",
     "from ipywidgets import widgets\n",
